# Object-Search-ROS

./: README.md
icpr_prob_module/: CMakeLists.txt  mainpage.dox  manifest.xml
icpr_prob_module/Env1/: 21marchv1.pgm  21marchv1.yaml  21marchv2.pgm  21marchv2.yaml  ProbMat.txt  Viewpoint_path_traced.txt
icpr_prob_module/Env2/: 4AprilEnv2.pgm  4AprilEnv2.yaml  4AprilEnv2v2.pgm  4AprilEnv2v2.yaml  ChangeinPotential.eps  H.eps  ProbMat.txt  TimeMat.txt  V.eps  V.txt  VT.eps  VT.txt  Viewpoint_path_traced.txt  locations_with_time.txt
icpr_prob_module/Env3/: 4AprilEnv3v1.pgm  4AprilEnv3v1.yaml  4AprilEnv3v2.pgm  4AprilEnv3v2.yaml  Heuristic.eps  Heuristic_Result.eps  OccupancyMap.eps  OnlyViewpoint.txt  ProbMat.txt  TimeMat.txt  ViewPointTime.eps  ViewPointTime_Result.eps  ViewPointwithTIme.txt  ViewpointOnlyResult.eps  ViewpointOnlyResult_1.eps  heuristicGoals.txt  locations_with_time.txt
icpr_prob_module/Env3/18_july_exp/: ProbMat.txt  Viewpoint_path_traced.txt
icpr_prob_module/Env3/5april/: ProbMat.txt  TimeGoals_C.txt  TimeMat.txt  ViewPoint_n_timeA.txt  ViewPoint_n_timeB.txt  ViewPoint_n_timeC.txt  Viewpoint_path_traced.txt  heuristicGoals_A.txt  heuristicGoals_B.txt  heuristicGoals_C.txt
icpr_prob_module/Env3/Result/: Heuristic_Result.eps  TimeOnly_Result.eps  ViewPoint_n_Time_Result.eps
icpr_prob_module/src/: draw_nodes.cpp  potentialmap_update.cpp  potentialmap_update_27july_markers.cpp  potentialmap_update_28july_notworking.cpp  probability_update.cpp  probability_update_backup.cpp  temp_probability_update.cpp  test_Mat.cpp  test_goal_poses.cpp  test_goals.cpp  test_initial_pose.cpp  test_karthik.cpp  test_viewpoint.cpp  time_test.cpp
just_time/: CMakeLists.txt  mainpage.dox  manifest.xml
just_time/include/just_time/: just_time.h
just_time/include/just_vp_prob/: just_vp_prob.h
just_time/src/: just_time.cpp  just_vp_prob.cpp
just_vp_prob/: CMakeLists.txt  mainpage.dox  manifest.xml
just_vp_prob/include/just_vp_prob/: just_vp_prob.h
just_vp_prob/src/: just_vp_prob.cpp
probability_module/: CMakeLists.txt  mainpage.dox  manifest.xml
probability_module/include/fuseProbabilities/: fuseProbabilities.h
probability_module/include/just_time/: just_time.h
probability_module/include/just_vp_prob/: just_vp_prob.h
probability_module/include/localglobalmap/: .localglobalmap.h.swp  localglobalmap.h
probability_module/include/potentialmap_update/: potentialmap_update.h
probability_module/src/: fuseProbabilities.cpp  icvgip_results.cpp  just_time.cpp  just_vp_prob.cpp  localglobalmap.cpp  main.cpp  potentialmap_update.cpp  potentialmap_update.h
